add a raw document for braille

--- a/agenda.html
+++ b/agenda.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <div id="root-wrap">
-    <a id="goto" href="./index.html">요약 페이지로 가기</a>
+    <div class="goto">
+      <a id="goto" href="./index.html">요약 페이지로 가기</a>
+      <a href="./agenda-raw.html" id="goto-raw">점자용 문서</a>
+    </div>
     <main>
       <section id="titlePage">
         <h1>2023 찾아가는 예산학교<br>
