--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <div id="root-wrap">
-    <a id="goto" href="./agenda.html">의제 페이지로 가기</a>
+    <div class="goto">
+      <a id="goto" href="./agenda.html">의제 페이지로 가기</a>
+      <a id="goto-raw" href="./summary-raw.html">점자용 문서</a>
+    </div>
     <main>
       <section id="titlePage">
         <h1>약자동행 예산학교 요약</h1>
