remove a style for raw document

--- a/agenda-raw.html
+++ b/agenda-raw.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="goto">
+        <a href="./agenda.html" id="goto-general">일반 문서</a>
+    </div>
     <section id="titlePage">
         <h1>2023 찾아가는 예산학교<br>
         의제란 무엇인가?</h1>
