--- a/summary-raw.html
+++ b/summary-raw.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="goto">
+        <a href="./index.html" id="goto-general">일반 문서</a>
+    </div>
     <section id="titlePage">
         <h1>약자동행 예산학교 요약</h1>
     </section>
